Added plugin to pom for test-coverage report