@@ -72,9 +72,6 @@
             <scope>test</scope>
         </dependency>
 
-
-
-
     <!-- test javafx with TextFX -->
 		<dependency>
             <groupId>org.testfx</groupId>
@@ -113,17 +110,52 @@
                   <release>16</release>
                 </configuration>
       </plugin>
+  
       <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
         		    <artifactId>maven-surefire-plugin</artifactId>
 		            <version>3.0.0-M5</version>
                 <configuration>
-                    <argLine>
-                    <!--Endret fra opens app/app=ALL-UNNAMED-->
-                      --add-opens CalendarApp.core/CalendarApp.core=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
-                    </argLine>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
 	    </plugin>
+
+      <plugin>
+              <artifactId>maven-clean-plugin</artifactId>
+              <version>3.1.0</version>
+      </plugin>
+        <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
+      <plugin>
+              <artifactId>maven-resources-plugin</artifactId>
+              <version>3.0.2</version>
+      </plugin>
+      <plugin>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <version>3.8.0</version>
+      </plugin>
+
+      <!--maven plugin for running test-coverage with JaCoCo-->
+      <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.7</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <!-- attached to Maven test phase -->
+                    <execution>
+                        <id>report</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
       <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
